; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_devices.c_Devices_H_MakeDirectory.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_devices.c_Devices_H_MakeDirectory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@devbug = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [14 x i8] c"MKDIR Command\00", align 1
@CHECK_READ_ONLY = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@host_path = common dso_local global i32 0, align 4
@CPU_regY = common dso_local global i32 0, align 4
@CPU_ClrN = common dso_local global i32 0, align 4
@CPU_SetN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @Devices_H_MakeDirectory to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Devices_H_MakeDirectory() #0 {
  %1 = load i64, i64* @devbug, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %5

3:                                                ; preds = %0
  %4 = call i32 @Log_print(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  br label %5

5:                                                ; preds = %3, %0
  %6 = load i32, i32* @CHECK_READ_ONLY, align 4
  %7 = load i32, i32* @FALSE, align 4
  %8 = call i64 @Devices_GetHostPath(i32 %7)
  %9 = icmp eq i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %5
  br label %19

11:                                               ; preds = %5
  %12 = load i32, i32* @host_path, align 4
  %13 = call i64 @Devices_MakeDirectory(i32 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %11
  store i32 1, i32* @CPU_regY, align 4
  %16 = load i32, i32* @CPU_ClrN, align 4
  br label %19

17:                                               ; preds = %11
  store i32 144, i32* @CPU_regY, align 4
  %18 = load i32, i32* @CPU_SetN, align 4
  br label %19

19:                                               ; preds = %10, %17, %15
  ret void
}

declare dso_local i32 @Log_print(i8*) #1

declare dso_local i64 @Devices_GetHostPath(i32) #1

declare dso_local i64 @Devices_MakeDirectory(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
